@@ -65,6 +65,7 @@
     <case id="TC77" class="ctf.jdo.tc7x.TestQueryFinalize"/>
 	<case id="TC78" class="ctf.jdo.tc7x.TestGetJdbcConnection"/>
 	<case id="TC79" class="ctf.jdo.tc7x.TestIsLocked"/>
+	<case id="TC79b" class="ctf.jdo.tc7x.TestIsPersistent"/>
 
     <!-- tc8x -->
     <case id="TC80" class="ctf.jdo.tc8x.TestSelfReferentialExtend"/>
@@ -165,6 +166,7 @@
     <!-- <case id="TC77" class="ctf.jdo.tc7x.TestQueryFinalize"/> -->
 	<case id="TC78" class="ctf.jdo.tc7x.TestGetJdbcConnection"/>
 	<case id="TC79" class="ctf.jdo.tc7x.TestIsLocked"/>
+	<case id="TC79b" class="ctf.jdo.tc7x.TestIsPersistent"/>
 
     <!-- tc8x -->
     <case id="TC80" class="ctf.jdo.tc8x.TestSelfReferentialExtend"/>
@@ -258,6 +260,7 @@
     <case id="TC77" class="ctf.jdo.tc7x.TestQueryFinalize"/>
 	<case id="TC78" class="ctf.jdo.tc7x.TestGetJdbcConnection"/>
 	<case id="TC79" class="ctf.jdo.tc7x.TestIsLocked"/>
+	<case id="TC79b" class="ctf.jdo.tc7x.TestIsPersistent"/>
 
     <!-- tc8x -->
     <case id="TC80" class="ctf.jdo.tc8x.TestSelfReferentialExtend"/>
@@ -352,6 +355,7 @@
     <case id="TC77" class="ctf.jdo.tc7x.TestQueryFinalize"/>
 	<case id="TC78" class="ctf.jdo.tc7x.TestGetJdbcConnection"/>
 	<case id="TC79" class="ctf.jdo.tc7x.TestIsLocked"/>
+	<case id="TC79b" class="ctf.jdo.tc7x.TestIsPersistent"/>
 
     <!-- tc8x -->
     <case id="TC80" class="ctf.jdo.tc8x.TestSelfReferentialExtend"/>
@@ -446,6 +450,7 @@
     <case id="TC77" class="ctf.jdo.tc7x.TestQueryFinalize"/>
 	<case id="TC78" class="ctf.jdo.tc7x.TestGetJdbcConnection"/>
 	<case id="TC79" class="ctf.jdo.tc7x.TestIsLocked"/>
+	<case id="TC79b" class="ctf.jdo.tc7x.TestIsPersistent"/>
 
     <!-- tc8x -->
     <case id="TC80" class="ctf.jdo.tc8x.TestSelfReferentialExtend"/>
@@ -543,6 +548,7 @@
     <case id="TC77" class="ctf.jdo.tc7x.TestQueryFinalize"/>
 	<case id="TC78" class="ctf.jdo.tc7x.TestGetJdbcConnection"/>
 	<case id="TC79" class="ctf.jdo.tc7x.TestIsLocked"/>
+	<case id="TC79b" class="ctf.jdo.tc7x.TestIsPersistent"/>
 
     <!-- tc8x -->
     <case id="TC80" class="ctf.jdo.tc8x.TestSelfReferentialExtend"/>
@@ -636,6 +642,7 @@
     <case id="TC77" class="ctf.jdo.tc7x.TestQueryFinalize"/>
 	<case id="TC78" class="ctf.jdo.tc7x.TestGetJdbcConnection"/>
 	<case id="TC79" class="ctf.jdo.tc7x.TestIsLocked"/>
+	<case id="TC79b" class="ctf.jdo.tc7x.TestIsPersistent"/>
 
     <!-- tc8x -->
     <case id="TC80" class="ctf.jdo.tc8x.TestSelfReferentialExtend"/>
@@ -729,6 +736,7 @@
     <case id="TC77" class="ctf.jdo.tc7x.TestQueryFinalize"/>
 	<case id="TC78" class="ctf.jdo.tc7x.TestGetJdbcConnection"/>
 	<case id="TC79" class="ctf.jdo.tc7x.TestIsLocked"/>
+	<case id="TC79b" class="ctf.jdo.tc7x.TestIsPersistent"/>
 
     <!-- tc8x -->
     <case id="TC80" class="ctf.jdo.tc8x.TestSelfReferentialExtend"/>
@@ -827,6 +835,7 @@
     <case id="TC77" class="ctf.jdo.tc7x.TestQueryFinalize"/>
 	<case id="TC78" class="ctf.jdo.tc7x.TestGetJdbcConnection"/>
 	<case id="TC79" class="ctf.jdo.tc7x.TestIsLocked"/>
+	<case id="TC79b" class="ctf.jdo.tc7x.TestIsPersistent"/>
 
     <!-- tc8x -->
     <case id="TC80" class="ctf.jdo.tc8x.TestSelfReferentialExtend"/>
@@ -925,6 +934,7 @@
     <case id="TC77" class="ctf.jdo.tc7x.TestQueryFinalize"/>
 	<case id="TC78" class="ctf.jdo.tc7x.TestGetJdbcConnection"/>
 	<case id="TC79" class="ctf.jdo.tc7x.TestIsLocked"/>
+	<case id="TC79b" class="ctf.jdo.tc7x.TestIsPersistent"/>
 
     <!-- tc8x -->
     <case id="TC80" class="ctf.jdo.tc8x.TestSelfReferentialExtend"/>
